--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -5,9 +5,9 @@
         <article class="post">
             <time class="date">
                 {{ post.published_date }}
-            </time>
-            <h2><a href="">{{ post.title }}</a></h2>
-            <p>{{ post.text|linebreaksbr }}</p>
+             </time>
+             <h2><a href="{% url 'post_detail' pk=post.pk %}">{{ post.title }}</a></h2>
+             <p>{{ post.text|linebreaksbr }}</p>
         </article>
     {% endfor %}
 {% endblock %}
